<resources>

    <string name="app_name">Heizung2</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Button1Text">Solar</string>
    <string name="Button2Text">Heizung</string>
    <string name="Button3Text">Warmw.</string>
    <string name="Button4Text">Elektro</string>
    <string name="Button5Text">kurz</string>
    <string name="Button6Text">mittel</string>
    <string name="Button7Text">lang</string>
    <string name="TextView1Text">Bilder</string>
    
</resources>